Fix shift of DE [IP-249]

--- a/frontend/scss/organisms/_o-digital-explorer.scss
+++ b/frontend/scss/organisms/_o-digital-explorer.scss
@@ -2,6 +2,10 @@ body {
   background-color: $color__black--91;
 }
 
+html:has(.o-digital-explorer) {
+  right: unset !important;
+}
+
 .o-digital-explorer {
   width: 100vw;
   position: relative;
